Fixed inconsistent settings button color on Firefox

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -206,6 +206,7 @@ body {
     float: right;
     margin: 0 auto;
     margin-right: 3px;
+    background-color: transparent;
     color: #007bff;
     font-size: 30px;
     line-height: 1;
